@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 24-Jul-2012
-#     another release candidate with tweaks to sbin scripts.
+# 25-Jul-2012
+#     Fix error in thor services verify
 
 module Jerbil
-  # version set to 0.99.07
-  Version = '0.99.07'
-  # date set to 24-Jul-2012
-  Version_Date = '24-Jul-2012'
-  #ident string set to: jerbil-0.99.07 24-Jul-2012
-  Ident = 'jerbil-0.99.07 24-Jul-2012'
+  # version set to 0.99.08
+  Version = '0.99.08'
+  # date set to 25-Jul-2012
+  Version_Date = '25-Jul-2012'
+  #ident string set to: jerbil-0.99.08 25-Jul-2012
+  Ident = 'jerbil-0.99.08 25-Jul-2012'
 end
