@@ -49,7 +49,7 @@ OptionParser.new do |opts|
 
   opts.on("-c", "--config [file]", String, "use this config file to find Jerbil" ) do |cfile|
     if FileTest.readable?(cfile) then
-      options = Jerbil::Config.new(cfile)
+      options = Jerbil.get_config(cfile)
     else
       puts "Config file cannot be read."
       exit 1
